# bitter-lesson

./: .env.example  .envrc  .gitignore  Data_Acquisition .md  README.md  batch_eval_to_md.py  build_index.py  chunk.py  chunk_and_index.py  index.py  indexer_service.py  load_index_example.py  mid_report.tex  pyproject.toml  queries.jsonl  sample.py  test_metadata.jsonl  webapp.py
agents/: core.py  meta_agent.py  search_agent.py
data/: downloaded.txt  failures.txt  ik_pdf_downloader.py  indian_kanoon_scraper.py  keywords.txt  links.txt  new_ik_pdf_downloader.py  new_indian_kanoon_scraper.py
data_md/md/: dgh_model_production_sharing_contract_nelp.md  doe_manual_procurement_consultancy_2022.md  general_financial_rules_2017_updated_2024.md  ignou_contract_block3.md  ignou_contract_unit12.md  ignou_contract_unit6.md  ignou_contract_unit_essentials.pdf.md  indian_contract_act_1972.md  information_technology_act_2000.pdf.md  jsm01072025ompicomm3972024_160859.md  lci_report_103_unfair_terms_1984.md  lci_report_13_contract_act_1958.md  lci_report_147_specific_relief_1993.md  lci_report_97_unfair_terms_1984.md  lci_report_9_specific_relief_1958.md  limitation_act_1963.md  morth_mca_ham.md  morth_model_concession_tot_2017.md  morth_model_epc.md  niti_model_epc_2019.md  sc_fateh_chand_1963.md  sc_frustration_overview_2022.md  sc_public_policy_2020.md  sc_section56_analysis_2020.md  sc_trimex_vedanta_2010.md  specific_relief_act_1963.md
data_md/md/.ipynb_checkpoints/: dgh_model_revenue_sharing_contract_2021-checkpoint.md  sc_kailash_nath_2015-checkpoint.md  sc_maula_bux_1969-checkpoint.md
eval/: results.md
ocr/: README.md  synth_metadata.py
tools/: emailer.py  searching.py  sectioner.py
vllm/: README.md  batch_vllm_ocr.py  synth_metadata.py
