[project]
name = "lma-major-project-bitter-lesson"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "addict>=2.4.0",
    "dspy>=3.0.3",
    "easydict>=1.13",
    "einops>=0.8.1",
    "faiss-cpu>=1.12.0",
    "ipywidgets>=8.1.7",
    "jupyterlab>=4.4.10",
    "matplotlib>=3.10.7",
    "pdf2image>=1.17.0",
    "pip>=25.2",
    "poppler-utils>=0.1.0",
    "rank-bm25>=0.2.2",
    "sentence-transformers>=5.1.2",
    "tokenizers==0.20.3",
    "torch==2.6.0",
    "torchvision>=0.21.0",
    "tqdm>=4.67.1",
    "transformers==4.46.3",
]

[tool.pyright]
venv = ".venv"
venvPath = "."
